--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -60,75 +60,12 @@
 							<div class="index-product-item-innerbox2">
 								<div class="flex-box">
 									<div class="img"></div>
-									<div class="title">劳务派遣</div>
+									<div class="title">{$vo.name}</div>
 								</div>
-								<div class="text">机关事业单位劳务派遣、国有企业劳务派遣</div>
+								<div class="text">{$vo.description|mb_substr=0,38,'utf-8'}</div>
 							</div>
 						</div>
 					</volist>
-                    <!-- <div class="index-product-item">
-                        <div class="index-product-item-innerbox2">
-                            <div class="flex-box">
-                                <div class="img"></div>
-                                <div class="title">岗位外包</div>
-                            </div>
-                            <div class="text">岗位流程外包有助于分散用人风险、降低管理成本、避免劳动纠纷</div>
-                        </div>
-                    </div>
-                    <div class="index-product-item">
-                        <div class="index-product-item-innerbox2">
-                            <div class="flex-box">
-                                <div class="img"></div>
-                                <div class="title">业务外包</div>
-                            </div>
-                            <div class="text">整合优秀的专业化资源，降低成本、提高效率、发挥核心竞争力</div>
-                        </div>
-                    </div>
-                    <div class="index-product-item">
-                        <div class="index-product-item-innerbox2">
-                            <div class="flex-box">
-                                <div class="img"></div>
-                                <div class="title">建筑劳务分包</div>
-                            </div>
-                            <div class="text">建筑劳务分包、机电安装劳务分包、劳务资质合作</div>
-                        </div>
-                    </div>
-                    <div class="index-product-item">
-                        <div class="index-product-item-innerbox2">
-                            <div class="flex-box">
-                                <div class="img"></div>
-                                <div class="title">保洁外包</div>
-                            </div>
-                            <div class="text">客服清洁外包、酒店大堂清洁外包、办公室清洁外包...</div>
-                        </div>
-                    </div>
-                    <div class="index-product-item">
-                        <div class="index-product-item-innerbox2">
-                            <div class="flex-box">
-                                <div class="img"></div>
-                                <div class="title">安保服务</div>
-                            </div>
-                            <div class="text">保安服务、安检服务、商务保镖、临时勤务</div>
-                        </div>
-                    </div>
-                    <div class="index-product-item">
-                        <div class="index-product-item-innerbox2">
-                            <div class="flex-box">
-                                <div class="img"></div>
-                                <div class="title">灵活用工</div>
-                            </div>
-                            <div class="text">集合兼职招聘、兼职管理、传单派发、临促等为一体的兼职服务</div>
-                        </div>
-                    </div>
-                    <div class="index-product-item">
-                        <div class="index-product-item-innerbox2">
-                            <div class="flex-box">
-                                <div class="img"></div>
-                                <div class="title">工伤外包</div>
-                            </div>
-                            <div class="text">帮助解决企业工伤风险，让企业更专注于研发和生产</div>
-                        </div>
-                    </div> -->
                 </div>
             </div>
 
