--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -62,7 +62,7 @@
 									<div class="img"></div>
 									<div class="title">{$vo.name}</div>
 								</div>
-								<div class="text">{$vo.description|mb_substr=0,38,'utf-8'}</div>
+								<div class="text">{$vo.description}</div>
 							</div>
 						</div>
 					</volist>
