--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -179,7 +179,7 @@
                             </div>
                         </li>
                         <li data-url="news">
-                            <p><a href="{:cmf_url('portal/News/index')}" title="新闻中心">新闻咨询</a></p>
+                            <p><a href="{:cmf_url('portal/News/index')}" title="新闻资讯">新闻资讯</a></p>
                         </li>
                         <li data-url="partner">
                             <p><a href="{:cmf_url('portal/Partner/index')}" title="合伙人计划">合伙人计划</a></p>
