--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -275,7 +275,7 @@
                     </portal:subCategories>
                 </ul>
                 <li class="menu-splitL-li border-1px-rgba animate">
-                    <a href="{:cmf_url('portal/News/index')}" class="menu-splitL-item" title="新闻咨询">新闻咨询</a>
+                    <a href="{:cmf_url('portal/News/index')}" class="menu-splitL-item" title="新闻资讯">新闻资讯</a>
                 </li>
                 <li class="menu-splitL-li border-1px-rgba animate">
                     <a href="{:cmf_url('portal/Partner/index')}" class="menu-splitL-item" title="合伙人计划">合伙人计划</a>
