--- a/public/themes/simpleboot3/portal/solution.html
+++ b/public/themes/simpleboot3/portal/solution.html
@@ -43,7 +43,7 @@
 									<div class="content_left_text">{$vo.post_content|mb_substr=0,800,'utf-8'}</div>
 								</div>
 								<div class="content_right">
-									<img src="__TMPL__/public/assets/style/imgs/solution/plan.png" alt="">
+									<img src="{:cmf_get_image_url($vo.thumbnail)}" alt="">
 								</div>
 							</div>
 							<php>
