--- a/public/themes/simpleboot3/public/customers.html
+++ b/public/themes/simpleboot3/public/customers.html
@@ -1,37 +1,37 @@
 <div id="customerList" class="index-customer-box">
-	<portal:articles item="vo" page="12" categoryIds="29" returnVarName="articles_data">
+	<!-- <portal:articles item="vo" page="12" categoryIds="29" returnVarName="articles_data">
 		<notempty name="$vo.more.thumbnail">
 			<div><img src="{:cmf_get_image_url($vo.more.thumbnail)}" /></div>
 		</notempty>
-	</portal:articles>
+	</portal:articles> -->
 </div>
 <script src="__TMPL__/public/assets/style/js/jquery.min.js"></script>
 <script type="text/javascript">
-	// $(function () {
-	// 	$.ajax({
-	// 		type: "post",
-	// 		url: "{:url('App/getCustomerList')}",
-	// 		data: { category: 29 },
-	// 		dataType: "json",
-	// 		success: function (result) {
-	// 			console.log(result);//打印服务端返回的数据(调试用)
-	// 			if (result.code == 1) {
-	// 				console.log(result.data);
-	// 				var arr = result.data;
-	// 				if (arr.length != 0) {
-	// 					var html = "";
-	// 					for (var i = 0; i < arr.length; i++) {
-	// 						html += '<div><img src="' + arr[i].thumbnail + '" alt=""></div>';
-	// 					}
-	// 					$("#customerList").html(html);
-	// 				} else {
-	// 					$("#customerList").html('');
-	// 				}
-	// 			}
-	// 		},
-	// 		error: function () {
+	$(function () {
+		$.ajax({
+			type: "post",
+			url: "{:url('App/getCustomerList')}",
+			data: { category: 29 },
+			dataType: "json",
+			success: function (result) {
+				console.log(result);//打印服务端返回的数据(调试用)
+				if (result.code == 1) {
+					console.log(result.data);
+					var arr = result.data;
+					if (arr.length != 0) {
+						var html = "";
+						for (var i = 0; i < arr.length; i++) {
+							html += '<div><img src="' + arr[i].thumbnail + '" alt=""></div>';
+						}
+						$("#customerList").html(html);
+					} else {
+						$("#customerList").html('');
+					}
+				}
+			},
+			error: function () {
 
-	// 		}
-	// 	})
-	// })
+			}
+		})
+	})
 </script>
