--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -25,6 +25,12 @@
     <meta http-equiv="Cache-Control" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <meta name="theme-color" content="#ff5000">
+	<style type="text/css">
+	  :root {
+		/* 变量格式 --变量名*/
+		--color-primary:orange;
+	  }
+	</style>
     <script src="__TMPL__/public/assets/style/js/flexible.js"></script>
     <link href="__TMPL__/public/assets/style/css/bootstrap.min.3.3.7.css" rel="stylesheet">
     <link href="__TMPL__/public/assets/style/css/slick.css" rel="stylesheet">
